welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:-6: error: Missing closing brace `}' assumed here
try {
^hasTeen:1: error: expected class or object definition
def hasTeen(a:Int, b:Int, c:Int): Boolean = {return (((12<a)&&(a<20))||((12<b)&&(b<20))||((12<c)&&(c<20)) 
^